@@ -36,6 +36,9 @@ hphp/system/php/spl/iterators/IteratorIterator.php
 hphp/system/php/spl/iterators/FilterIterator.php
 hphp/system/php/spl/iterators/RecursiveFilterIterator.php
 
+hphp/system/php/spl/iterators/ArrayIterator.php
+hphp/system/php/spl/iterators/RecursiveArrayIterator.php
+
 hphp/system/php/filter/filter_has_var.php
 hphp/system/php/filter/filter_input.php
 hphp/system/php/filter/filter_var_array.php
@@ -67,7 +70,6 @@ hphp/system/php/spl/datastructures/SplFixedArray.php
 hphp/system/php/spl/datastructures/SplObjectStorage.php
 hphp/system/php/spl/datastructures/SplPriorityQueue.php
 hphp/system/php/spl/iterators/AppendIterator.php
-hphp/system/php/spl/iterators/ArrayIterator.php
 hphp/system/php/spl/iterators/EmptyIterator.php
 hphp/system/php/spl/iterators/InfiniteIterator.php
 hphp/system/php/spl/iterators/LimitIterator.php
